--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8866
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql:///xunwu?characterEncoding=utf-8&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=123456
+
+server.error.whitelabel.enabled=false
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.hmtl
