--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.password=123456
 
 server.error.whitelabel.enabled=false
 spring.mvc.view.prefix=/
-spring.mvc.view.suffix=.hmtl
+spring.mvc.view.suffix=.html
